# AI-1

./: .gitignore  README.md
Lista1/src/: main.py
Lista1/src/algorithms/: astar.py  dijkstra.py  tabu_search.py
Lista1/src/gtfs/: graph_builder.py  loader.py  models.py
Lista2/: CMakeLists.txt
Lista2/src/: main.cpp
Lista2/src/algortihms/: agent.cpp  agent.h  evaluator.cpp  evaluator.h  heuristics.cpp  heuristics.h
Lista2/src/board/: board.cpp  board.h  move.cpp  move.h
Lista2/src/genetic/: genetic_algorithm.cpp  genetic_algorithm.h
Lista2/src/tests/: test_benchmark.cpp  test_benchmark.h  test_game.cpp  test_game.h  test_genetic.cpp  test_genetic.h  test_tournament.cpp  test_tournament.h
